# ml-python-cpp

./: README.md
Cpp/: CMakeLists.txt  main.cpp
First/load_test/: benchmark_py.sh  payload.json  results_20251118_102841.csv
First/python/: train.py
Second/cpp/: CMakeLists.txt  ml_nids.cpp
Second/load_test/: benchmark_cpp.sh  benchmark_py.sh  compare.py
Second/load_test/results/: cpp_benchmark_20251118_231426.csv  cpp_benchmark_20251121_191325.csv  cpp_benchmark_20251121_194705.csv  python_benchmark_20251118_223422.csv  python_benchmark_20251118_233817.csv  python_benchmark_20251120_121545.csv
Second/load_test/results/plots_comparison_20251118_234556/: comparison_report.html
Second/load_test/results/plots_comparison_20251118_235156/: comparison_report.html
Second/load_test/results/plots_comparison_20251120_122003/: comparison_report.html
Second/models/: preprocessing_params.json  preprocessors.pkl
Second/python/: app_nids.py  train_nids.py
load_test/: benchmark.sh  benchmark_cpp.sh  monitor.sh  plot_results.py  res.csv  results_20251117_103313.csv  results_20251117_152113.csv  results_20251117_203649.csv  results_cpp_20251118_001907.csv  results_cpp_20251118_002111.csv  results_cpp_20251118_002249.csv  results_cpp_20251118_002324.csv  results_cpp_20251118_102340.csv
python/: app.py  train.py
